trying to fix shifting menu button

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -17,13 +17,17 @@
 }
 
 .navbar-accordianed {
-  width: 100%;
-  background-color: black;
+  max-width: 100%;
+  /*background-color: #545454;*/
 	padding-top: 2em;
-	padding-bottom: 1em;
+	padding-left: 2em;
 }
 
-#navbar-title {
+.navbar-header, .navbar-link-container-accordianed {
+	/*max-width: 90%;*/
+}
+
+#navbar-title, #navbar-title-accordianed {
 	float: left;
 	display: block;
 	text-align: center;
@@ -32,10 +36,10 @@
 	color: white;
 	font-size: 1em;
 	padding-top: .2em;
-	padding-left: .4em;
 }
 
 #navbar-title-accordianed {
+/*	float: left;
 	display: block;
 	width: 100%;
 	color: white;	
@@ -43,11 +47,30 @@
 	text-align: center;
 	text-decoration: none;
 	font-size: 1.7em;
-	padding-top: .2em;
+	padding-top: .2em;*/
+}
+
+#mobile-menu-icon {
+	display: block;
+	float: right;
+	cursor: pointer;
+	position: relative;
+}
+
+.mobile-menu-icon-bar {
+	width: 1.3em;
+	height: .1em;
+	background-color: white;
+	margin: 6px 0;
+	transition: 0.4s;
+}
+
+.navbar-link-container {
+	float: right;
 }
 
 .navbar-link-container-accordianed {
-	margin-top: 2em;
+	margin-top: 4em;
 }
 
 .navbar-link {
@@ -66,22 +89,11 @@
 
 .navbar-link-accordianed {
 	display: block;
-	width: 100%;
+	float: center;
+	text-align: center;
+	color: white;	
 	padding: 0;
 	margin-top: 1em;
-}
-
-#mobile-menu-icon {
-	float: right;
-	cursor: pointer;
-}
-
-.mobile-menu-icon-bar {
-	width: 1.3em;
-	height: .1em;
-	background-color: white;
-	margin: 6px 0;
-	transition: 0.4s;
 }
 
 .intro-caption, .intro-caption-faded {
@@ -107,10 +119,10 @@
 		font-size: 1.5em;
 	}
 
-	#navbar-title {
+	#navbar-title, #navbar-title-accordianed {
 		font-size: 1.7em;
 		padding-top: .4em;
-		padding-left: .2em;
+		/*padding-left: .2em;*/
 	}
 
 	#mobile-menu-icon {
@@ -131,9 +143,6 @@
 	#navbar-title {
 		font-size: 1.7em;
 		padding-top: .4em;
-		padding-left: .4em;
-		padding-right: .5em;
-		margin-right: 1em;
 	}
 
 	.mobile-menu-icon, .mobile-menu-icon-bar {
